force-app/main/default/objects/Countries_API__mdt/Countries_API__mdt.object-meta.xml
<CustomObject>
    <label>Countries API</label>
    <pluralLabel>Countries API</pluralLabel>
</CustomObject>