force-app/main/default/objects/Countries_API__mdt/fields/access_key__c.field-meta.xml
<CustomField>
    <fullName>access_key__c</fullName>
    <label>access_key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>