force-app/main/default/objects/Countries_API__mdt/fields/EndPoint_Dev__c.field-meta.xml
<CustomField>
    <fullName>EndPoint_Dev__c</fullName>
    <label>EndPoint Dev</label>
    <length>255</length>
    <type>Text</type>
</CustomField>