force-app/main/default/objects/Countries_API__mdt/fields/EndPoint_Prod__c.field-meta.xml
<CustomField>
    <fullName>EndPoint_Prod__c</fullName>
    <label>EndPoint Prod</label>
    <length>255</length>
    <type>Text</type>
</CustomField>