force-app/main/default/objects/Countries_API__mdt/fields/HTTP_Method__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Method__c</fullName>
    <label>HTTP Method</label>
    <length>20</length>
    <type>Text</type>
</CustomField>